--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.5.0",
     "morgan": "~1.9.0",
+    "promise-limit": "^2.7.0",
     "pug": "^2.0.3",
     "xml2json": "^0.11.2"
   }
