--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.5.0",
     "morgan": "~1.9.0",
+    "prettyjson": "^1.2.1",
     "promise-limit": "^2.7.0",
     "pug": "^2.0.3",
     "xml2js": "^0.4.19"
